# Tweets-Sentiment-Analysis-BERT

./: .gitignore  CLAUDE.md  README.md  config.yaml  dev.config.yaml  prod.config.yaml  pyproject.toml
api/: dependencies.py  main.py  middleware.py
api/routers/: sentiment.py
api/schemas/: sentiment.py
app/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
app/src/: App.css  App.jsx  index.css
artifacts/checkpoints-dev/: test_metrics.json
notebooks/: eda.ipynb
src/: utils.py
src/data/: cleaner.py  dataset.py  loader.py  preprocessor.py  splits.py
src/model/: architecture.py  evaluate.py  loader.py  prediction.py  train.py
src/pipelines/: data_preprocessing.py  model_evaluation.py  model_training.py
