[project]
name = "tweets-sentiment-analysis-bert"
version = "0.1.0"
description = "Tweet sentiment analysis using BERT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "fastapi>=0.135.3",
 "ipykernel>=7.2.0",
 "pandas>=2.3.3",
 "ruff>=0.15.10",
 "scikit-learn>=1.5.0",
 "streamlit>=1.56.0",
 "torch>=2.11.0",
 "torchtext>=0.18.0",
 "tqdm>=4.66.0",
 "transformers>=5.5.3",
 "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "D", "RUF"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
